--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+[submodule "ecell_form"]
+    path = ecell_form
+    url = https://github.com/example/ecell_form.git
